Project

General

Profile

Actions

Bug #48941

closed

valgrind: invalid read in perm_state constructor

Added by Casey Bodley over 3 years ago. Updated about 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
valgrind
Backport:
pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

==19985== Invalid read of size 1
==19985==    at 0x65B9DD4: verify_requester_payer_permission(perm_state_base*) (rgw_common.cc:1137)
==19985==    by 0x65B9F07: verify_bucket_permission(DoutPrefixProvider const*, perm_state_base*, rgw_bucket const&, RGWAccessControlPolicy*, RGWAccessControlPolicy*, boost::optional<rgw::IAM::Policy> const&, std::vector<rgw::IAM::Policy, std::allocator<rgw::IAM::Policy> > const&, unsigned long) (rgw_common.cc:1164)
==19985==    by 0x65BA507: verify_bucket_permission(DoutPrefixProvider const*, req_state*, unsigned long) (rgw_common.cc:1257)
==19985==    by 0x68A09FA: RGWListBucket::verify_permission(optional_yield) (rgw_op.cc:2735)
==19985==    by 0x6374B74: rgw_process_authenticated(RGWHandler_REST*, RGWOp*&, RGWRequest*, req_state*, optional_yield, bool) (rgw_process.cc:146)
==19985==    by 0x63778D1: process_request(rgw::sal::RGWRadosStore*, RGWREST*, RGWRequest*, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, rgw::auth::StrategyRegistry const&, RGWRestfulIO*, OpsLogSocket*, optional_yield, rgw::dmclock::Scheduler*, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >*, int*) (rgw_process.cc:301)
==19985==    by 0x61AA762: RGWCivetWebFrontend::process(mg_connection*) (rgw_civetweb_frontend.cc:70)
==19985==    by 0x61AA531: civetweb_callback(mg_connection*) (rgw_civetweb_frontend.cc:51)
==19985==    by 0x64B9058: handle_request (civetweb.c:12514)
==19985==    by 0x64BE938: process_new_connection (civetweb.c:15924)
==19985==    by 0x64BF136: worker_thread_run (civetweb.c:16253)
==19985==    by 0x64BF1F5: worker_thread (civetweb.c:16296)
==19985==  Address 0x427cf278 is on thread 89's stack
==19985==  232 bytes below stack pointer

Related issues 1 (0 open1 closed)

Copied to rgw - Backport #48948: pacific: valgrind: invalid read in perm_state constructorResolvedCasey BodleyActions
Actions #1

Updated by Casey Bodley over 3 years ago

  • Pull request ID set to 38991
Actions #2

Updated by Casey Bodley over 3 years ago

  • Status changed from New to Pending Backport
Actions #3

Updated by Nathan Cutler over 3 years ago

  • Copied to Backport #48948: pacific: valgrind: invalid read in perm_state constructor added
Actions #4

Updated by Nathan Cutler about 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF