rgw: avoid (rgw_file) illegal access to stack memory

Fixes: https://tracker.ceph.com/issues/48941

Signed-off-by: Matt Benjamin <mbenjamin@redhat.com>